2006-08-19  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/am/lex.am, lib/am/yacc.am: Drop the inline rules, always use
	ylwrap.  Suggested by Akim Demaille long ago, to ease maintenance.
	* automake.in (handle_languages): Do not define MORE-THAN-ONE.
	(yacc_lex_finish_helper, lang_yacc_finish, lang_lex_finish): Always
	require ylwrap.
	* doc/automake.texi (Auxiliary Programs, Yacc and Lex): Update the
	documentation of ylwrap.
	* tests/lex.test, tests/lex4.test, tests/mmodely.test,
	tests/yacc.test, tests/yacc2.test, tests/yacc3.test,
	tests/yaccpp.test: Adjust.

	* doc/automake.texi (Releases): Update statistics until 1.9.6.

	* Makefile.am (maintainer-check): Check for mkdir_p.
	* automake.texi (Obsolete macros): Document AM_PROG_MKDIR_P.
	* lib/am/data.am, lib/am/distdir.am, lib/am/install.am,
	lib/am/java.am, lib/am/libs.am, lib/am/lisp.am, lib/am/ltlib.am,
	lib/am/mans.am, lib/am/progs.am, lib/am/python.am,
	lib/am/scripts.am, lib/am/texinfos.am: Use MKDIR_P instead of mkdir_p.
	* m4/mkdirp.m4 (AM_PROG_MKDIR_P): Define mkdir_p using $MKDIR_P, not
	as '$(MKDIR_P)', otherwise it will break `Makefile.in's that use
	mkdir_p without defining MKDIR_P.
	* tests/distdir.test, tests/instman.test, tests/txinfo21.test:
	Adjust.

	* Makefile.am (SUBDIRS): Build lib first, for lib/Automake/Config.pm.
	* configure.ac (ACLOCAL): Use --acdir=m4 in addition to
	-I m4.  Running aclocal during the rebuild rules will fail
	if the default acdir does not exist.

	* NEWS, configure.ac, m4/init.m4, m4/lispdir.m4, m4/mkdirp.m4:
	Require Autoconf 2.60 instead of some intermediate development
	version.

	* doc/automake.texi (Standard Directory Variables): Fix multitable
	width.
	(Autotools Introduction): Fix @uref usage.

2006-08-19  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* doc/automake.texi: Fix some typos in the introduction,
	adjust some spacing; spell `GNU Build System' consistently.
	(menu): Unify node naming.
	(Standard Directory Variables): Clarify that this list is not