@@ -1,3 +1,8 @@
+2006-08-20  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	* m4/mkdirp.m4 (AM_PROG_MKDIR_P): Prefix mkdir_p with
+	$(top_builddir)/ if it is a relative directory.
+
 2006-08-19  Alexandre Duret-Lutz  <adl@gnu.org>
 
 	* lib/am/lex.am, lib/am/yacc.am: Drop the inline rules, always use
